--- a/Consulta_Brasil/3/index.html
+++ b/Consulta_Brasil/3/index.html
@@ -870,7 +870,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
                       data-id="f82c787" id="item-cobranca" data-element_type="widget"
                       data-widget_type="text-editor.default">
                       <div class="elementor-widget-container">
-                        <p>Somente após a confirmação do pagamento desta taxa, seu saque será realizado!</p>
+                        <p><span style="color: #f59400;">Somente após a confirmação do pagamento desta taxa, seu saque será realizado!</span></p>
                       </div>
                     </div>
                     <div class="elementor-element elementor-element-c358203 elementor-widget elementor-widget-spacer"
