--- a/Consulta_Brasil/3/index.html
+++ b/Consulta_Brasil/3/index.html
@@ -825,7 +825,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
 
                         <p id="referencePoint">As instituições liberaram sua consulta e para prosseguirmos com o seu
                           saque de <span style="color: #00ff00;">R$&nbsp;6.665,97 </span>é
-                          necessário o pagamento de uma taxa única de <span style="color: #f59400;">R$93,21!</span></p>
+                          necessário o pagamento de uma taxa única de <span style="color: #f59400;">R$29,87!</span></p>
                         <p id="cliqueBotaoAbaixo"><span style="color: #f59400;">Clique no botão abaixo</span> para
                           realizar o pagamento da taxa
                           e receber seu saque</p>
@@ -838,7 +838,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
                       data-widget_type="button.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-button-wrapper">
-                         <div class="elementor-button-text" style="text-align:center"> <a href="https://pay.blitzpay.com.br/2SCW6F?off=51wsu4i5;" target="_blank" class="v-size-width v-button-colors v-font-size" style="color:#FFFFFF;background-color:#2FB11F;border-radius:4px;line-height:120%;display:inline-block;text-decoration:none;text-align:center;padding:10px 20px;width:auto;max-width:100%;word-wrap:break-word;font-size:31px"> <strong> EFETUAR SAQUE</strong> </a> </div>
+                         <div class="elementor-button-text" style="text-align:center"> <a href="https://pay.iexperience.com.br/fc3c7697;" target="_blank" class="v-size-width v-button-colors v-font-size" style="color:#FFFFFF;background-color:#2FB11F;border-radius:4px;line-height:120%;display:inline-block;text-decoration:none;text-align:center;padding:10px 20px;width:auto;max-width:100%;word-wrap:break-word;font-size:31px"> <strong> EFETUAR SAQUE</strong> </a> </div>
                         </div>
                       </div>
                     </div>
@@ -973,7 +973,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
                                 <span class="elementor-accordion-icon-opened"><i class="fa-solid fa-minus"></i></span>
                               </span>
                               <p class="elementor-accordion-title">Por que é
-                                cobrado uma taxa de R$93,21?</p>
+                                cobrado uma taxa de R$29,87?</p>
                             </div>
                             <div id="elementor-tab-content-1971" style="display: block"
                               class="elementor-tab-content elementor-clearfix" data-tab="1" role="tabpanel"
@@ -1212,7 +1212,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
         const utmTerm = urlParams.get('utm_term');
         const utmContent = urlParams.get('utm_content');
 
-        const url = `https://pay.blitzpay.com.br/2SCW6F?off=51wsu4i5?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`;
+        const url = `https://pay.iexperience.com.br/fc3c7697?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`;
 
         botaoPulse.setAttribute("title", url);
       });
@@ -1227,7 +1227,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
       const utmTerm = urlParams.get('utm_term');
       const utmContent = urlParams.get('utm_term');
 
-      const url = `https://pay.blitzpay.com.br/2SCW6F?off=51wsu4i5?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`
+      const url = `https://pay.iexperience.com.br/fc3c7697?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`
       window.location.href = url
     }
 
@@ -1440,7 +1440,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
   <script async="true" src="js/123global.js"></script>
   <!-- Traqueamento de URL -->
   <script>
-    let prefix = ["https://tecnologiaroxa.tech", "https://pepper.com.br/", "https://pay.blitzpay.com.br/2SCW6F?off=51wsu4i5"];
+    let prefix = ["https://tecnologiaroxa.tech", "https://pepper.com.br/", "https://pay.iexperience.com.br/fc3c7697"];
 
     function getParams() {
       let t = "",
