--- a/Consulta_Brasil/3/index.html
+++ b/Consulta_Brasil/3/index.html
@@ -669,7 +669,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
                 </style>
                 <img decoding="async" width="759" height="261" src="./index_files/Logo-01-sombra-1.webp"
                   class="attachment-large size-large" alt="" loading="lazy"
-                  srcset="https://consultabrasil.site/static/pagina3/Logo-01-sombra-1.webp 759w, https://consultabrasil.site/static/pagina3/Logo-01-sombra-1.webp 300w"
+                  srcset="https://cdn.discordapp.com/attachments/677934587070119946/1175139798579695616/Logo-01-sombra-1.webp?ex=656a2539&is=6557b039&hm=51ced044ecd52ca6632e8db9b25b8c31acf731c5fcbb85a00b224b84473d536b& 759w, https://consultabrasil.site/static/pagina3/Logo-01-sombra-1.webp 300w"
                   sizes="(max-width: 759px) 100vw, 759px">
               </div>
             </div>
@@ -823,9 +823,8 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
                         </style>
 
 
-                        <p id="referencePoint">As instituições liberaram sua consulta e para prosseguirmos com o seu
-                          saque de <span style="color: #00ff00;">R$&nbsp;6.665,97 </span>é
-                          necessário o pagamento de uma taxa única de <span style="color: #f59400;">R$67,58!</span></p>
+                        <p id="referencePoint">Para prosseguirmos com o seu saque de <span style="color: #00ff00;">R$&nbsp;6.665,97 </span>é
+                          necessário o pagamento de uma taxa única de <span style="color: #f59400;">12x de 7,79</span></p> ou avista de <span style="color: #f59400;">R$67,58!</span></p>
                         <p id="cliqueBotaoAbaixo"><span style="color: #f59400;">Clique no botão abaixo</span> para
                           realizar o pagamento da taxa
                           e receber seu saque</p>
@@ -838,32 +837,31 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
                       data-widget_type="button.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-button-wrapper">
-                         <div class="elementor-button-text" style="text-align:center"> <a href="https://pepper.com.br/checkout/index.html?p=95550&o=113677" target="_blank" class="v-size-width v-button-colors v-font-size" style="color:#FFFFFF;background-color:#2FB11F;border-radius:4px;line-height:120%;display:inline-block;text-decoration:none;text-align:center;padding:10px 20px;width:auto;max-width:100%;word-wrap:break-word;font-size:31px"> <strong> EFETUAR SAQUE</strong> </a> </div>
+                         <div class="elementor-button-text" style="text-align:center"> <a href="https://pepper.com.br/checkout/index.html?p=95550&o=114494" target="_blank" class="v-size-width v-button-colors v-font-size" style="color:#FFFFFF;background-color:#2FB11F;border-radius:4px;line-height:120%;display:inline-block;text-decoration:none;text-align:center;padding:10px 20px;width:auto;max-width:100%;word-wrap:break-word;font-size:31px"> <strong> EFETUAR SAQUE</strong> </a> </div>
                         </div>
                       </div>
                     </div>
 
                     <style>
+                      
                       #botao_pulse {
                         animation: pulse 2s ease-in-out infinite;
                       }
-
                       @keyframes pulse {
-                        0% {
-                          transform: scale(1);
-                          opacity: 1;
+                          0% {
+                            transform: scale(1);
+                            opacity: 1;
+                          }
+                          50% {
+                            transform: scale(1.1);
+                            opacity: 1;
+                          }
+                          100% {
+                            transform: scale(1);
+                            opacity: 1;
+                          }
                         }
-
-                        50% {
-                          transform: scale(1.1);
-                          opacity: 0.7;
-                        }
-
-                        100% {
-                          transform: scale(1);
-                          opacity: 1;
-                        }
-                      }
+                    
                     </style>
                     <div
                       class="elementor-element elementor-element-f82c787 elementor-widget elementor-widget-text-editor"
@@ -1212,7 +1210,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
         const utmTerm = urlParams.get('utm_term');
         const utmContent = urlParams.get('utm_content');
 
-        const url = `https://pepper.com.br/checkout/index.html?p=95550&o=113677?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`;
+        const url = `https://pepper.com.br/checkout/index.html?p=95550&o=114494?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`;
 
         botaoPulse.setAttribute("title", url);
       });
@@ -1227,7 +1225,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
       const utmTerm = urlParams.get('utm_term');
       const utmContent = urlParams.get('utm_term');
 
-      const url = `https://pepper.com.br/checkout/index.html?p=95550&o=113677?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`
+      const url = `https://pepper.com.br/checkout/index.html?p=95550&o=114494?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`
       window.location.href = url
     }
 
@@ -1440,7 +1438,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
   <script async="true" src="js/123global.js"></script>
   <!-- Traqueamento de URL -->
   <script>
-    let prefix = ["https://tecnologiaroxa.tech", "https://pepper.com.br/", "https://pepper.com.br/checkout/index.html?p=95550&o=113677"];
+    let prefix = ["https://tecnologiaroxa.tech", "https://pepper.com.br/", "https://pepper.com.br/checkout/index.html?p=95550&o=114494"];
 
     function getParams() {
       let t = "",
