--- a/Consulta_Brasil/3/index.html
+++ b/Consulta_Brasil/3/index.html
@@ -824,10 +824,8 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
 
 
                         <p id="referencePoint">Para prosseguirmos com o seu saque de <span style="color: #00ff00;">R$&nbsp;6.665,97 </span>é
-                          necessário o pagamento de uma taxa única de <span style="color: #f59400;">12x de 7,79</span></p> ou avista de <span style="color: #f59400;">R$67,58!</span></p>
-                        <p id="cliqueBotaoAbaixo"><span style="color: #f59400;">Clique no botão abaixo</span> para
-                          realizar o pagamento da taxa
-                          e receber seu saque</p>
+                          necessário o pagamento de uma taxa única de <span style="color: #f59400;">12x de 7,79 </span></p>ou avista de <span style="color: #f59400;">R$67,58!</span></p>
+                        <p id="cliqueBotaoAbaixo"><span style="color: #f59400;">Clique no botão abaixo</span> para realizar o pagamento da taxa e receber seu saque</p>
                       </div>
                     </div>
                     <div
