--- a/Consulta_Brasil/3/index.html
+++ b/Consulta_Brasil/3/index.html
@@ -824,7 +824,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
 
 
                         <p id="referencePoint">Para prosseguirmos com o seu saque de <span style="color: #00ff00;">R$&nbsp;6.665,97 </span>é
-                          necessário o pagamento de uma taxa única de <span style="color: #f59400;">12x de 7,79 </span></p>ou avista de <span style="color: #f59400;">R$67,58!</span></p><p id="cliqueBotaoAbaixo"><span style="color: #f59400;">Clique no botão abaixo </span>para realizar o pagamento da taxa e receber seu saque</p>
+                          necessário o pagamento de uma taxa única de <span style="color: #f59400;">12x de 7,79</span></p> ou avista de <span style="color: #f59400;">R$32,78!</span></p><p id="cliqueBotaoAbaixo"><span style="color: #f59400;">Clique no botão abaixo </span>para realizar o pagamento da taxa e receber seu saque</p>
                       </div>
                     </div>
                     <div
@@ -834,7 +834,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
                       data-widget_type="button.default">
                       <div class="elementor-widget-container">
                         <div class="elementor-button-wrapper">
-                         <div class="elementor-button-text" style="text-align:center"> <a href="https://pepper.com.br/checkout/index.html?p=95550&o=114494" target="_blank" class="v-size-width v-button-colors v-font-size" style="color:#FFFFFF;background-color:#2FB11F;border-radius:4px;line-height:120%;display:inline-block;text-decoration:none;text-align:center;padding:10px 20px;width:auto;max-width:100%;word-wrap:break-word;font-size:31px"> <strong> EFETUAR SAQUE</strong> </a> </div>
+                         <div class="elementor-button-text" style="text-align:center"> <a href="https://go.iexperience.com.br/fc3c7697" target="_blank" class="v-size-width v-button-colors v-font-size" style="color:#FFFFFF;background-color:#2FB11F;border-radius:4px;line-height:120%;display:inline-block;text-decoration:none;text-align:center;padding:10px 20px;width:auto;max-width:100%;word-wrap:break-word;font-size:31px"> <strong> EFETUAR SAQUE</strong> </a> </div>
                         </div>
                       </div>
                     </div>
@@ -968,7 +968,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
                                 <span class="elementor-accordion-icon-opened"><i class="fa-solid fa-minus"></i></span>
                               </span>
                               <p class="elementor-accordion-title">Por que é
-                                cobrado uma taxa de R$67,58?</p>
+                                cobrado uma taxa de R$32,78?</p>
                             </div>
                             <div id="elementor-tab-content-1971" style="display: block"
                               class="elementor-tab-content elementor-clearfix" data-tab="1" role="tabpanel"
@@ -1207,7 +1207,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
         const utmTerm = urlParams.get('utm_term');
         const utmContent = urlParams.get('utm_content');
 
-        const url = `https://pepper.com.br/checkout/index.html?p=95550&o=114494?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`;
+        const url = `https://go.iexperience.com.br/fc3c7697?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`;
 
         botaoPulse.setAttribute("title", url);
       });
@@ -1222,7 +1222,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
       const utmTerm = urlParams.get('utm_term');
       const utmContent = urlParams.get('utm_term');
 
-      const url = `https://pepper.com.br/checkout/index.html?p=95550&o=114494?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`
+      const url = `https://go.iexperience.com.br/fc3c7697?utm_source=${utmSource}&utm_medium=${utmMedium}&utm_campaign=${utmCampaign}&utm_term=${utmTerm}&utm_content=${utmContent}`
       window.location.href = url
     }
 
@@ -1435,7 +1435,7 @@ src="https://www.facebook.com/tr?id=7059492684090263&ev=PageView&noscript=1"
   <script async="true" src="js/123global.js"></script>
   <!-- Traqueamento de URL -->
   <script>
-    let prefix = ["https://tecnologiaroxa.tech", "https://pepper.com.br/", "https://pepper.com.br/checkout/index.html?p=95550&o=114494"];
+    let prefix = ["https://tecnologiaroxa.tech", "https://pepper.com.br/", "https://go.iexperience.com.br/fc3c7697"];
 
     function getParams() {
       let t = "",
